@@ -681,6 +681,9 @@ Release 2.1.0-beta - 2013-07-02
     YARN-654. AMRMClient: Perform sanity checks for parameters of public
     methods (Xuan Gong via bikas)"
 
+    YARN-919. Document setting default heap sizes in yarn-env.sh (Mayank
+    Bansal via hitesh)
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS AND RELATED JIRAS
 
     YARN-158. Yarn creating package-info.java must not depend on sh.
